<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientbg"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context=".views.SignIn">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="14dp"
            android:src="@drawable/ic_backk" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:text="Welcome"
                android:layout_marginTop="12dp"
                android:textColor="@color/white"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jost_regular"
                android:text="Log back into your account"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@drawable/card_background"
        android:elevation="36dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="48dp"
                android:fontFamily="@font/jost_regular"
                android:text="LOGIN"
                android:layout_centerHorizontal="true"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/edit_text_background"
                android:drawableLeft="@drawable/ic_emails"
                android:drawablePadding="15dp"
                android:textSize="15sp"
                android:drawableTint="@color/black"
                android:fontFamily="@font/poppins_light"
                android:hint="@string/mail"
                android:inputType="textEmailAddress"
                android:paddingStart="26dp"
                android:paddingEnd="26dp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/edit_text_background"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="15dp"
                android:drawableTint="@color/black"
                android:textSize="15sp"
                android:fontFamily="@font/poppins_light"
                android:hint="@string/pwd"
                android:inputType="textPassword"
                android:paddingStart="26dp"
                android:paddingEnd="26dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="25dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/btnLogIn"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textAllCaps="false"/>

            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="26dp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/dontAccount"
                android:fontFamily="@font/jost_regular"
                android:layout_marginStart="12dp"/>
            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/register"
                android:textStyle="bold"
                android:fontFamily="@font/jost_regular"
                android:layout_marginStart="12dp"/>

        </LinearLayout>

    </RelativeLayout>


</LinearLayout>